syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
option go_package = "github.com/danielzfranklin/plantopo/api/v1";

service Matchmaker {
  // SetupConnection is called by the frontend to get a backend to connect to.
  rpc SetupConnection (MatchmakerSetupConnectionRequest)
    returns (MatchmakerSetupConnectionResponse);

  // RegisterBackend is called by the backend to register itself with the
  // matchmaker
  rpc RegisterBackend (MatchmakerRegisterBackendRequest)
    returns (MatchmakerRegisterBackendResponse);

  // UnregisterBackend is called by the backend to unregister itself with the
  // matchmaker
  rpc UnregisterBackend (MatchmakerUnregisterBackendRequest)
    returns (MatchmakerUnregisterBackendResponse);
  
  // RegisterClose is called by the backend to inform the matchmaker the
  // backend has closed a map.
  rpc RegisterClose (MatchmakerRegisterCloseRequest)
    returns (MatchmakerRegisterCloseResponse);

  rpc Stats (google.protobuf.Empty) returns (google.protobuf.Struct);

  rpc DebugState (google.protobuf.Empty) returns (google.protobuf.Struct);
}

message MatchmakerSetupConnectionRequest {
  string map_id = 1;
}

message MatchmakerSetupConnectionResponse {
  string backend = 1;
  string token = 2;
}

message MatchmakerRegisterBackendRequest {
  string backend = 1;
}

message MatchmakerRegisterBackendResponse {
}

message MatchmakerUnregisterBackendRequest {
  string backend = 1;
}

message MatchmakerUnregisterBackendResponse {
}

message MatchmakerRegisterCloseRequest {
  string backend = 1;
  string map_id = 2;
}

message MatchmakerRegisterCloseResponse {
}
